# LiZhen

./: .gitignore  README.CN.md  README.EN.md  README.md  conf.yaml  main.py  mian.py  pyproject.toml  requirements.txt  test.py  test.ui  updater.py  uv.toml
interfaces/: Info.py  Interface.py  MainWindow.py  Setting.py  SubInterface.py  Test.py  TestInterface.py
interfaces/ui/: Info.ui  Ui_Info.py  Ui_test.py
launcher/assets/qss/: Updater.qss
launcher/assets/qss/dark/: Manager.qss  Setting.qss  Start.qss
launcher/assets/qss/light/: Manager.qss  Setting.qss  Start.qss
launcher/configs/: config.json  launcher.json  mirrors.json  updater.json
launcher/interfaces/: ASR.py  Cards.py  Character.py  Console.py  Info.py  Interfaces.py  LLM.py  MainWindow.py  Persona.py  Project.py  Setting.py  Start.py  TTS.py  Widgets.py
launcher/interfaces/ui/: Console.ui  Info.ui  Standard.ui  Start.ui  Ui_Console.py  Ui_Info.py  Ui_Start.py
launcher/open_llm_vtuber/: readme.md
launcher/open_llm_vtuber/config_manager/: utils.py
launcher/utils/: __init__.py  announce.py  bridge.py  color.py  common.py  configs.py  enums.py  form.py  form_generator.py  i18n.py  log.py  logger.py  managers.py  mapping.py  paths.py  stream.py  styles.py  upgrade.py
utils/: config.py  configs.py  log.py  path.py  stream.py  style.py
